Se crea circunferencia y fondo

--- a/01-pokemon/index.html
+++ b/01-pokemon/index.html
@@ -11,6 +11,8 @@
 
     <div class="layout">
 
+        <!-- <img src="/01-pokemon/assets/img/imagenLetra.jpg" alt="letraPokeball"> -->
+
         <main class="layout__container">
 
             <img src="/01-pokemon/assets/img/pokeball.png" class="layout__img" alt="pokeball">
@@ -19,7 +21,7 @@
                 <div class="ball__top"></div>
                 <div class="ball__line"></div>
                 <div class="ball__button"></div>
-                <div class="ball__botton"></div>
+                <div class="ball__bottom"></div>
             </div>
 
         </main>
